--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "projeto1",
     "builds": [
-        { "src": "index.js", "use": "vercel/server" }
+        { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
         { "src": "/.*",  "status": 404,"dest": "index.js" }
