chance in "dest": "index.js"

--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,7 @@
         { 
             "src": "/(.*)",  
             "status": 404,
-            "dest": "/" 
-        }
+            "dest": "index.js" 
+    }
     ]
 }
-
