--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     ],
     "routes": [
         { 
-            "src": "/(.*)",  
+            "src": "/.*",  
             "status": 404,
             "dest": "index.js" 
     }
