--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "version": 2,
-    "name": "projeto1",
     "builds": [
         { 
             "src": "./index.js", 
@@ -8,10 +7,6 @@
          }
     ],
     "routes": [
-        { 
-            "src": "/.*",  
-            "status": 404,
-            "dest": "index.js" 
-    }
+        { "src": "/.*",  "status": 404,"dest": "index.js" }
     ]
 }
