--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "sqlite": "^3.0.0",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "^5.0.8",
+    "yarn": "^1.22.19"
   }
 }
