--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
          }
     ],
     "routes": [
-        { "src": "/.*", "dest": "index.js" }
+        { "src": "/.*", "status": 404, "dest": "index.js" }
     ]
 }
