--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,8 @@
     "routes": [
         {"src": "/(.*)",
          "status": 404, 
-         "dest": "/index.js" },
+         "dest": "/index.js" }
 
-         {
-            "src": "/",
-            "dest": "/index.js",
-            "methods": 
-              "GET"
-        }
-
+    
     ] 
 }
