--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jobify",
   "version": "1.0.0",
   "description": "Jobs Digital is a simple jobs board for sites.",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
