--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Jobs Digital is a simple jobs board for sites.",
   "main": "./dist/index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
